--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://Mujtaba01:Kashif1234%40@loginsignup.f4w2k.mongodb.net/LoginSignup?retryWrites=true&w=majority&appName=LoginSignup
+MONGODB_URI=mongodb+srv://Mujtaba01:Kashif1234%40@loginsignup.f4w2k.mongodb.net/MJ-Ecommerce?retryWrites=true&w=majority&appName=LoginSignup
 TOKEN_SECRET_KEY="ASDNEDASDASPROJECTDAKJASHDECOMMERCE"
 FRONTEND_URL="http://localhost:5173"
