--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "preline": "^2.7.0",
     "react": "^18.3.1",
